# function-discovery-tool-for-agent-regist

./: README.md  STEP-1.md  TASK.md  main.py  math_operations.py  pyproject.toml  registry.json
