[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-function-discovery-tool-for-agent-regist"
version = "0.1.0"
description = "Function discovery tool for agent registries with execution guarantees"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[tool.setuptools]
py-modules = ["main", "math_operations"]
